# esp-socketio-client

./: CHANGELOG.md  README.md
common_components/linux_compat/esp_timer/: esp_timer_linux.c  timer_task.cpp  timer_task.hpp
common_components/linux_compat/esp_timer/include/: esp_timer.h
components/esp_socketio_client/: CMakeLists.txt  Kconfig  README.md  esp_socketio_client.c  esp_socketio_ns_list.c  esp_socketio_packet.c  idf_component.yml
components/esp_socketio_client/examples/linux/: CMakeLists.txt  sdkconfig.defaults
components/esp_socketio_client/examples/linux/main/: main.c
components/esp_socketio_client/examples/test_server/: package.json  server_key.pem
components/esp_socketio_client/include/: esp_socketio_client.h  esp_socketio_ns_list.h  esp_socketio_packet.h
components/esp_socketio_client/private_include/: esp_socketio_internal.h
examples/linux/: CMakeLists.txt  README.md
examples/linux/main/: CMakeLists.txt  main.c
examples/test_server/: ca_cert.pem  package.json  server.js  server_cert.pem
